# Product-Lifecycle-Visualizer

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  test-connection.js
frontend/app/: globals.css  layout.tsx  page.tsx
src/: gemini.rs  main.rs  models.rs  pdf.rs  routes.rs
