[package]
name = "lifecycle_visualizer"
version = "0.1.0"
edition = "2021"
authors = ["Hackathon Team"]
description = "Product Lifecycle Visualizer: Generate multi-stage sustainability storyboards using Gemini image generation"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
printpdf = "0.7"
include_dir = "0.7"
rand = "0.8"
dotenv = "0.15"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[workspace]
members = ["."]
